--- a/vues/components/header.html
+++ b/vues/components/header.html
@@ -1,8 +1,8 @@
 <div id="sidenav">
-    <span id="btn" onclick="listeNav()"><i class="fas fa-bars"></i> </span>
+    <span id="btn" onclick="listeNav()"><em class="fas fa-bars"></em> </span>
 </div>
 <header>
-    <nav>
+    <nav aria-label="Site menu">
         <div id="accueil_forum_inscription_connexion">
             <a href="{% route(/index) %}" class="boutons_standards">Accueil</a>
             {% if(isAdmin) %}
